# multi-agent_maze_exploration_simulation

./: .gitmodules  CMakeLists.txt  GridGraph.cpp  GridGraph.h  Maze.cpp  Maze.h  README.md  RequestHandler  RequestHandler.cpp  RequestHandler.h  Robot  Robot.cpp  Robot.h  RobotMaster  RobotMaster.cpp  RobotMaster.h  main.cpp
data_analysis/: analysis_functions.py  make_gif.py  swarm_size_evaluation.py  swarm_start_pos_evaluation.py
dependencies/: CMakeLists.txt
examples/10x10_FCFS_Scalability/: Simulation.json
examples/10x10_Greedy_Start_Position/: Simulation.json
examples/3x3_Greedy/: Simulation.json
include/: Coordinates.h  GridGraph.h  Maze.h  MultiRobot.h  MultiRobot_NC_UI.h  RequestHandler.h  RequestTemplates.h  Requests.h  Robot.h  RobotMaster.h
include/Frontier_Exploration/Robot/: MultiRobot.h  MultiRobot_C.h  MultiRobot_C_CellReservation.h
include/Frontier_Exploration/RobotMaster/: RobotMaster.h  RobotMaster_C.h  RobotMaster_C_FCFS.h  (+2 more)
include/Robot/: MultiRobot.h  MultiRobot_C.h  MultiRobot_C_CellReservation.h  MultiRobot_C_IE.h  MultiRobot_CellReservation.h  MultiRobot_IE.h  MultiRobot_NC.h  MultiRobot_NC_CellReservation.h  MultiRobot_NC_IE.h  MultiRobot_NC_UI.h  Robot.h  SoloRobot.h
include/RobotMaster/: RobotMaster.h  RobotMaster_C.h  RobotMaster_C_FCFS.h  RobotMaster_C_Greedy.h  RobotMaster_CellReservation.h  RobotMaster_FCFS.h  RobotMaster_Greedy.h  RobotMaster_IE.h  RobotMaster_IE_V2.h  RobotMaster_NC.h  RobotMaster_NC_FCFS.h  RobotMaster_NC_Greedy.h  RobotMaster_NC_IE.h  RobotMaster_NC_UI.h
src/: Maze.cpp  MultiRobot  MultiRobot.cpp  MultiRobot_NC_UI  MultiRobot_NC_UI.cpp  RequestHandler.cpp  Robot.cpp  RobotMaster.cpp  SoloRobot.cpp  main.cpp
src/Robot/: MultiRobot.cpp  MultiRobot_C.cpp  MultiRobot_C_CellReservation.cpp  MultiRobot_C_IE.cpp  MultiRobot_CellReservation.cpp  MultiRobot_IE.cpp  MultiRobot_NC.cpp  MultiRobot_NC_Greedy.cpp  MultiRobot_NC_IE.cpp  MultiRobot_NC_UI.cpp  Robot.cpp  SoloRobot.cpp
src/RobotMaster/: RobotMaster.cpp  RobotMaster_C.cpp  RobotMaster_C_FCFS.cpp  RobotMaster_C_Greedy.cpp  RobotMaster_C_IE.cpp  RobotMaster_C_IE_V2.cpp  RobotMaster_CellReservation.cpp  RobotMaster_FCFS.cpp  RobotMaster_Greedy.cpp  RobotMaster_IE.cpp  RobotMaster_IE_V2.cpp  RobotMaster_NC.cpp  RobotMaster_NC_FCFS.cpp  RobotMaster_NC_Greedy.cpp  RobotMaster_NC_IE.cpp  RobotMaster_NC_UI.cpp
(+8 files in other folders)
